--- a/FrontSimpleSearch/src/app/shared/components/footer/footer.component.html
+++ b/FrontSimpleSearch/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,1 @@
-<p>footer works!</p>
+<p style="margin-bottom: 0 !important; bottom: 0;; width: 100%; text-align: center; background-color: red; position: fixed;">footer works!</p>
