--- a/FrontSimpleSearch/src/app/shared/components/header/header.component.html
+++ b/FrontSimpleSearch/src/app/shared/components/header/header.component.html
@@ -1,1 +1,2 @@
-<p>header works!</p>
+<p style="top: 0; width: 100%; text-align: center; background-color: red; position: fixed;">header works!</p>
+
