--- a/FrontSimpleSearch/src/styles.scss
+++ b/FrontSimpleSearch/src/styles.scss
@@ -4,6 +4,16 @@
     box-sizing: border-box;
   }
 
+  body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #FFF; 
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
   ul, ol {
     list-style: none;
     padding: 0;
