--- a/FrontSimpleSearch/src/app/shared/components/footer/footer.component.html
+++ b/FrontSimpleSearch/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p style="margin-bottom: 0 !important; bottom: 0;; width: 100%; text-align: center; background-color: red; position: fixed;">footer works!</p>
+<div class="card bg-light footer">
+  <div class="card-body">
+    <p class="card-text">
+        © 2025 All Rights Reserved to SSF | Version 0.1
+    </p>
+  </div>
+</div>
